[package]
name = "rust-v7-cmd"
version = "0.1.0"
authors = ["James Bostock <james.bostock@gmail.com>"]
description = "Some Seventh Edition Unix commands implemented in Rust"
repository = "https://github.com/james-bostock/rust-v7-cmd"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
rust-v7-lib = { git = "https://github.com/james-bostock/rust-v7-lib", tag = "v0.1.1" }
